--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,13 @@
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.2",
     "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-watch": "^2.0.4"
+  },
+  "scripts": {
+    "start": "babel-watch --watch views *.js"
   }
 }
